29 January 2013: Wouter
	- printout log less verbosely, not every axfr packet.

25 January 2013: Wouter
	- fix gcc warning, do not use uninit value for rng init.
	- fix zonefiles-check: entry in nsd.conf
	- remove -fwhole-program gcc flag usage.  We cannot reliably detect
	  if it works without failure.

23 January 2013: Wouter
	- beta3

22 January 2013: Wouter
	- Fix time calculation of zone transfer.
	- log ip address with tcp failure.  

21 January 2013: Wouter
	- Improve tabs in sample nsd.conf for different tabsizes.
	- Fix segv if xfrdir does not exit.
	- create xfrdir on make install (does not remove on make uninstall,
	  because this could be /tmp).
	- do not leave task files in /tmp if nsd fails to startup because
	  of file permissions.
	- do-ip4 and do-ip6 nsd.conf options just like unbound.
	- fixed testset for dig9 default with edns.

18 January 2013: Wouter
	- Fix configure for gentoo gcc and headers.
	- List libevent in README.
	- Tabs and spaces nicer in nsd.conf.sample.
	- Fix spurious assertion failure for some rrl blocks.

16 January 2013: Wouter
	- Added zonefiles-check option, default yes, check mtimes of zone files
	  on sighup and startup (from Robin Hack).

15 January 2013: Wouter
	- documented that the _implicit_ pattern names are used internally.

10 January 2013: Wouter
	- updated RELNOTES.
	- applied patch from Robin Hack to remove double pid file truncation.
	- repattern is called reconfig (because most config options are
	  picked up, except for superuser options (chroot, logfile, port)).
	- document that the zonefile attribute can be empty.

9 January 2013: Wouter
	- 4.0.0b2 is beta2 version tag.

8 January 2013: Matthijs
	- Merge changes from 3.2.15 with trunk:
		* Update docs: CREDITS, NEW-CFG-OPTION, REQUIREMENTS,
		  RELNOTES, TODO
		* Update dname_test.tpkg test.
		* TSIG init only fails if no digests at all can be found.
		* Remove unused tsig_get_algorithm_by_id code (was used by
		  nsd-xfer).
		* Fix some fd leaks.