@@ -1,3 +1,6 @@
+29 January 2013: Matthijs
+	- RRL documented in nsd.conf.sample
+
 29 January 2013: Wouter
 	- printout log less verbosely, not every axfr packet.
 
